# Grupo2---Proyecto

./: ARRYS.py  Analisis_database_MIT_Arritmias.ipynb  CITATION.cff  COMO_ACTUALIZAR_GITHUB.md  Dockerfile  ECG_TCNCVAE_Entrenamiento.ipynb  ENTREGA_CHECKLIST.md  LICENSE  README.md  SHA256SUMS.txt  VALIDATION_REPORT.md  environment.yml  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements.txt
App/: main.py  main2.py  requirements.txt
App/Modelo/: README.md  clf_aug_physionet.onnx  clf_aug_physionet.onnx.data  clf_aug_physionet.pt  label_encoder_physionet.pkl  latent_bank.npz  tcncvae_decoder_physionet.onnx  tcncvae_decoder_physionet.onnx.data  tcncvae_encoder_physionet.onnx
Arquitectura y entrenamiento/: ecg_tcncvae_entrenamiento.py
Codigo/: Dabase_MIT_Arritmias.ipynb  README.md
Codigo/Analisis Database MIT-BIH/: ecg_avance2_pipeline.py
Codigo/Arquitectura y entrenamiento/: ECG_TCNCVAE_Entrenamiento.ipynb  ecg_tcncvae_entrenamiento.py
Codigo/src/: explicacion_generacion_sintetica_ecg.md  newDataset_TCN_cVAE_(2).ipynb  newdataset_tcn_cvae_(2).py  pruebas_ARRYS_2.py  requirements.txt  (+1 more)
config/: default.yaml
docs/: DATASET.md  KNOWN_ISSUES.md  MIGRATION.md  MODEL_CARD.md  REPRODUCIBILITY.md  RESULTS.md
figures/: README.md
legacy/: README.md
models/: README.md
notebooks/: 00_reproduce_reported_results.ipynb  01_inference_demo.ipynb  README.md
results/: README.md
scr/: ARRYS.py
scripts/: check_models.py  check_repository.py  generate_ecg.py  migrate_repository.py  reproduce_figures.py
tests/: test_constants.py  test_metrics.py
(+9 files in other folders)
